# AI-Agents

./: README.md
Automated _project_planning/: main.py  pyproject.toml
Content_Planner_Agent/: main.py  pyproject.toml
Deep Research Agent/backend/: agent.py  main.py  requirements.txt
Deep Research Agent/frontend/: app.jsx
Langgraph_RAG_Agent/: main.py  pyproject.toml
Langgraph_RAG_Agent/chroma_db/: chroma.sqlite3
Linkedin_post_generator/: README.md  cli.py  pipeline.py  pyproject.toml  requirements.txt
Linkedin_post_generator/api/: main.py
Linkedin_post_generator/app_agents/: formatter_agent.py  hashtag_agent.py  research_agent.py  tone_agent.py
Linkedin_post_generator/ui/: gradio_app.py  streamlit_app.py
Research Agent/: C1M5_Assignment.ipynb  research_tools.ipynb  unittests.ipynb
crew_ai_deep_research/: main.py  pyproject.toml  utils.py
deep_research_flow/: pyproject.toml
deep_research_flow/src/deep_research_flow/: main.py  utils.py
deep_research_flow/src/deep_research_flow/crews/deep_research_crew/: crew.py
deep_research_flow/src/deep_research_flow/crews/deep_research_crew/config/: agents.yaml  tasks.yaml
deep_research_flow/src/deep_research_flow/crews/deep_research_crew/guardrails/: guardrails.py
deep_research_flow/src/deep_research_flow/tools/: chart_generator_tool.py
