[project]
name = "linkedin-post-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn[standard]>=0.41.0",
    "openai-agents>=0.0.7",
    "openai>=1.75.0",
    "fastapi>=0.115.0",
    "streamlit>=1.40.0",
    "gradio>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
]
