[project]
name = "deep_research_flow"
version = "0.1.0"
description = "deep_research_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.3.0",
    "exa-py==1.16.1",
]

[project.scripts]
kickoff = "deep_research_flow.main:kickoff"
run_crew = "deep_research_flow.main:kickoff"
plot = "deep_research_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"